トップページの初版の完成

--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -27,7 +27,7 @@
         <h2
           class="text-3xl font-semibold tracking-tight text-balance text-white sm:text-4xl"
         >
-          さあ、今すぐドライバーになろう
+          さあ、今すぐ転職サポートを受けましょう
         </h2>
         <p class="mt-6 text-lg/8 text-pretty text-gray-300">
           どんなタクシー会社があるのかの質問だけでも構いません。まずはお気軽にお問い合わせください
@@ -36,11 +36,12 @@
           class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start"
         >
           <a
-            href="#"
-            class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-xs hover:bg-gray-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
+            href="/lp-1/"
+            target="_blank"
+            class="rounded-md bg-white px-3.5 py-2.5 font-semibold text-gray-900 shadow-xs hover:bg-gray-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
             >転職支援サービスに登録</a
           >
-          <a href="#" class="text-sm/6 font-semibold text-white"
+          <a href="/contact/" class="font-semibold text-white"
             >メールで求人を受け取る<span aria-hidden="true">→</span></a
           >
         </div>
