--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,12 +80,26 @@ const jobs = await getLatestJobsFromNotion();
             </p>
             <div class="mt-10 flex items-center gap-x-6">
               <a
-                href="/download"
-                class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                href="/lp-1/"
+                target="_blank"
+                class="rounded-md bg-indigo-600 px-3.5 py-2.5 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
               >
                 転職支援サービスに登録
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-5"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"></path>
+                </svg>
               </a>
-              <a href="/demo" class="text-sm/6 font-semibold text-gray-900">
+              <a href="/contact/" class="font-semibold text-gray-900">
                 メールで求人を受け取る <span aria-hidden="true">→</span>
               </a>
             </div>
@@ -215,7 +229,7 @@ const jobs = await getLatestJobsFromNotion();
           タクシーメイトの特徴
         </h2>
         <p class="mt-6 text-lg/8 text-gray-600">
-          月給50万円が目指せるタクシー業界に特化した求人紹介サービスです
+          月給45万円以上が目指せるタクシー業界に特化した求人紹介サービスです
         </p>
       </div>
       <ul
@@ -274,9 +288,7 @@ const jobs = await getLatestJobsFromNotion();
         <div
           class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8"
         >
-          <div
-            class="mt-6 lg:col-span-5 lg:col-start-1 lg:row-start-1 lg:mt-0 xl:col-span-4"
-          >
+          <div class="mt-6 lg:col-span-5 lg:col-start-1 lg:row-start-1 lg:mt-0">
             <h3 class="text-lg font-medium text-gray-900">
               数分のお電話で推薦書を作成。 だから合格率が高い。
             </h3>
@@ -284,9 +296,7 @@ const jobs = await getLatestJobsFromNotion();
               タクシーメイトでは、希望される方に数分のお電話で職歴や事故歴、運転履歴などをお伺いし推薦書を作成しています。現時点で履歴書など何も準備をしていない方でも、最短でお問合せしたその日中にタクシー企業との面接の日程まで決めることができます。求職者様には非常に早い転職活動ができたとご好評いただいております。
             </p>
           </div>
-          <div
-            class="flex-auto lg:col-span-7 lg:col-start-6 lg:row-start-1 xl:col-span-8 xl:col-start-5"
-          >
+          <div class="flex-auto lg:col-span-7 lg:col-start-6 lg:row-start-1">
             <img
               src="/images/why-us1.jpg"
               alt="White canvas laptop sleeve with gray felt interior, silver zipper, and tan leather zipper pull."
@@ -297,9 +307,7 @@ const jobs = await getLatestJobsFromNotion();
         <div
           class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8"
         >
-          <div
-            class="mt-6 lg:col-span-5 lg:col-start-8 lg:row-start-1 lg:mt-0 xl:col-span-4 xl:col-start-9"
-          >
+          <div class="mt-6 lg:col-span-5 lg:col-start-8 lg:row-start-1 lg:mt-0">
             <h3 class="text-lg font-medium text-gray-900">
               本当に条件に合った企業だけを紹介。
               だから紹介は厳選した2〜3社のみ。
@@ -308,9 +316,7 @@ const jobs = await getLatestJobsFromNotion();
               他社の人材紹介会社でお問い合わせをすると、すぐにタクシー会社を4〜5社紹介されて全ての企業と日程調整をすることが多くあります。これでは面接の日程調整も大変で、内定を受けた後も断らなくてはならないこともあります。タクシーメイトでは基本的には事前に働きたい条件を聞いた上でまずは厳選した1社（最大3社まで）を紹介します。ひとまず面接に行ってみようではなく、事前に条件を決めた上で面接に行く形での転職活動を推奨しています。
             </p>
           </div>
-          <div
-            class="flex-auto lg:col-span-7 lg:col-start-1 lg:row-start-1 xl:col-span-8"
-          >
+          <div class="flex-auto lg:col-span-7 lg:col-start-1 lg:row-start-1">
             <img
               src="/images/why-us2.jpg"
               alt="Detail of zipper pull with tan leather and silver rivet."
@@ -321,9 +327,7 @@ const jobs = await getLatestJobsFromNotion();
         <div
           class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8"
         >
-          <div
-            class="mt-6 lg:col-span-5 lg:col-start-1 lg:row-start-1 lg:mt-0 xl:col-span-4"
-          >
+          <div class="mt-6 lg:col-span-5 lg:col-start-1 lg:row-start-1 lg:mt-0">
             <h3 class="text-lg font-medium text-gray-900">
               転職後もコミュニティで情報交換。 だから継続的に稼ぐ人が多い。
             </h3>
@@ -331,9 +335,7 @@ const jobs = await getLatestJobsFromNotion();
               タクシーメイトには転職したドライバーの小さなコミュニティが存在します。実際に入社した後も、先輩ドライバーがどのように稼いでいるかや、最近はこのエリアが人が増えてきたなどの情報等、その業界の現役ドライバーしか知り得ない、鮮度の高い情報交換の場を設けています。このような仕組みがあることで、タクシーメイトから転職した人材は入社後も安定して稼げていることが特徴です。
             </p>
           </div>
-          <div
-            class="flex-auto lg:col-span-7 lg:col-start-6 lg:row-start-1 xl:col-span-8 xl:col-start-5"
-          >
+          <div class="flex-auto lg:col-span-7 lg:col-start-6 lg:row-start-1">
             <img
               src="/images/why-us3.jpg"
               alt="White canvas laptop sleeve with gray felt interior, silver zipper, and tan leather zipper pull."
@@ -363,7 +365,7 @@ const jobs = await getLatestJobsFromNotion();
       >
         {
           jobs.map((job) => (
-            <article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pt-80 pb-8 sm:pt-48 lg:pt-80">
+            <article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pt-60 pb-8 sm:pt-48 lg:pt-60">
               <img
                 src="/images/banner-square.png"
                 alt={`${job.company}の求人画像`}
@@ -375,7 +377,7 @@ const jobs = await getLatestJobsFromNotion();
               <div class="flex flex-wrap items-center gap-y-1 overflow-hidden text-sm/6 text-gray-300">
                 {job.dispatchApps && job.dispatchApps.length > 0 && (
                   <div class="flex items-center gap-x-2">
-                    {job.dispatchApps.map((app) => (
+                    {job.dispatchApps.map((app: string) => (
                       <a
                         href="#"
                         class="relative z-10 rounded-full bg-gray-50 px-3 font-medium text-gray-600 hover:bg-gray-100"
@@ -400,7 +402,7 @@ const jobs = await getLatestJobsFromNotion();
       <div class="mt-8 flex justify-center">
         <a
           href="/jobs/"
-          class="text-sm/6 font-semibold text-indigo-600 hover:text-indigo-500"
+          class="font-semibold text-indigo-600 hover:text-indigo-500"
           >求人一覧を見る <span aria-hidden="true">&rarr;</span></a
         >
       </div>
@@ -545,57 +547,23 @@ const jobs = await getLatestJobsFromNotion();
         <dl class="mt-16 divide-y divide-gray-900/10">
           <div class="py-6 first:pt-0 last:pb-0">
             <dt>
-              <!-- Expand/collapse question button -->
-              <button
-                type="button"
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                aria-controls="faq-0"
-                aria-expanded="false"
-              >
-                <span class="text-base/7 font-semibold"
-                  >紹介費用などは発生しますか？</span
+              <span class="text-base/7 font-semibold flex items-center gap-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
                 >
-                <span class="ml-6 flex h-7 items-center">
-                  <!--
-                    Icon when question is collapsed.
-  
-                    Item expanded: "hidden", Item collapsed: ""
-                  -->
-                  <svg
-                    class="size-6"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    aria-hidden="true"
-                    data-slot="icon"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M12 6v12m6-6H6"></path>
-                  </svg>
-                  <!--
-                    Icon when question is expanded.
-  
-                    Item expanded: "", Item collapsed: "hidden"
-                  -->
-                  <svg
-                    class="hidden size-6"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    aria-hidden="true"
-                    data-slot="icon"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M18 12H6"></path>
-                  </svg>
-                </span>
-              </button>
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                  ></path>
+                </svg>
+                紹介費用などは発生しますか？
+              </span>
             </dt>
             <dd class="mt-2 pr-12" id="faq-0">
               <p class="text-base/7 text-gray-600">
@@ -603,8 +571,87 @@ const jobs = await getLatestJobsFromNotion();
               </p>
             </dd>
           </div>
-
-          <!-- More questions... -->
+          <div class="py-6 first:pt-0 last:pb-0">
+            <dt>
+              <span class="text-base/7 font-semibold flex items-center gap-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                  ></path>
+                </svg>
+                正式な認可を受けた人材紹介会社ですか？
+              </span>
+            </dt>
+            <dd class="mt-2 pr-12" id="faq-0">
+              <p class="text-base/7 text-gray-600">
+                はい。弊社は厚生労働大臣より正式な許認可を受けた人材紹介会社（有料職業紹介事業者）です（許認可番号
+                13-ユ-316113）。紹介を行い実際にタクシー企業様に入社し雇用契約を締結するまでの転職活動をサポートさせていただきます。
+              </p>
+            </dd>
+          </div>
+          <div class="py-6 first:pt-0 last:pb-0">
+            <dt>
+              <span class="text-base/7 font-semibold flex items-center gap-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                  ></path>
+                </svg>
+                何社くらい紹介してくれますか？
+              </span>
+            </dt>
+            <dd class="mt-2 pr-12" id="faq-0">
+              <p class="text-base/7 text-gray-600">
+                タクシーメイトでは紹介数の多さではなく、ヒアリングをした上で本当にあなたに合った、月給45万円が目指せるタクシー企業のみを紹介しています。そのため、通常1〜2社のみの紹介となります。
+                ただし、面接を事前連絡なしで辞退した場合などについては、今後企業を紹介することができませんので予めご了承ください。
+              </p>
+            </dd>
+          </div>
+          <div class="py-6 first:pt-0 last:pb-0">
+            <dt>
+              <span class="text-base/7 font-semibold flex items-center gap-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                  ></path>
+                </svg>
+                面接から入社までのスケジュールを教えてください
+              </span>
+            </dt>
+            <dd class="mt-2 pr-12" id="faq-0">
+              <p class="text-base/7 text-gray-600">
+                サービスの導入時間は、組織の規模や要件によって異なります。
+                通常は比較的迅速に導入が可能ですが、具体的な導入期間はお問い合わせいただくか、専任担当者にご相談ください。
+              </p>
+            </dd>
+          </div>
         </dl>
       </div>
     </div>
