Breadcrumbをコンポーネントにして配置

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,7 +74,7 @@ const jobs = await getLatestJobsFromNotion();
               給与は頑張った分だけ。休みは自由に。
             </h1>
             <p
-              class="mt-8 text-lg font-medium text-pretty text-gray-500 sm:max-w-md sm:text-xl/8 lg:max-w-none"
+              class="mt-8 text-lg font-medium text-pretty text-gray-700 sm:max-w-md sm:text-xl/8 lg:max-w-none"
             >
               タクシーメイトは、タクシー業界に特化した転職支援サービスです。あなたの住んでいる場所や希望の条件の中から最もマッチしたタクシー会社を厳選して紹介します。
             </p>
@@ -228,7 +228,7 @@ const jobs = await getLatestJobsFromNotion();
         >
           タクシーメイトの特徴
         </h2>
-        <p class="mt-6 text-lg/8 text-gray-600">
+        <p class="mt-6 text-lg text-gray-700">
           月給45万円以上が目指せるタクシー業界に特化した求人紹介サービスです
         </p>
       </div>
@@ -242,7 +242,9 @@ const jobs = await getLatestJobsFromNotion();
             src="/images/feature1.jpg"
             alt="ドライバー志望者がスマホでタクシー会社の求人を探している様子"
           />
-          <h3 class="mt-6 text-lg/8 font-semibold tracking-tight text-gray-900">
+          <h3
+            class="mt-6 text-lg/8 font-semibold tracking-tight text-gray-900 text-center"
+          >
             住んでいる場所から適した企業を紹介
           </h3>
         </li>
@@ -252,7 +254,9 @@ const jobs = await getLatestJobsFromNotion();
             src="/images/feature2.jpg"
             alt="ドライバー志望者が面接対策を受けている様子"
           />
-          <h3 class="mt-6 text-lg/8 font-semibold tracking-tight text-gray-900">
+          <h3
+            class="mt-6 text-lg/8 font-semibold tracking-tight text-gray-900 text-center"
+          >
             面接対策を実施し高い合格率を実現
           </h3>
         </li>
@@ -262,7 +266,9 @@ const jobs = await getLatestJobsFromNotion();
             src="/images/feature3.jpg"
             alt="キャリアアドバイザーが企業に推薦書を提出している様子"
           />
-          <h3 class="mt-6 text-lg/8 font-semibold tracking-tight text-gray-900">
+          <h3
+            class="mt-6 text-lg/8 font-semibold tracking-tight text-gray-900 text-center"
+          >
             推薦書を作成するので内定が出やすい
           </h3>
         </li>
@@ -276,10 +282,10 @@ const jobs = await getLatestJobsFromNotion();
       class="mx-auto max-w-2xl px-4 py-24 sm:px-6 sm:py-32 lg:max-w-7xl lg:px-8"
     >
       <div class="mx-auto max-w-3xl text-center">
-        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
+        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">
           タクシーメイトが選ばれる理由
         </h2>
-        <p class="mt-4 text-gray-500">
+        <p class="mt-4 text-gray-700">
           数多くの人材紹介・転職支援サービスの中でも、タクシーメイトは以下のような特徴があります。
         </p>
       </div>
@@ -289,10 +295,10 @@ const jobs = await getLatestJobsFromNotion();
           class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8"
         >
           <div class="mt-6 lg:col-span-5 lg:col-start-1 lg:row-start-1 lg:mt-0">
-            <h3 class="text-lg font-medium text-gray-900">
-              数分のお電話で推薦書を作成。 だから合格率が高い。
+            <h3 class="text-2xl font-semibold text-gray-900">
+              数分のお電話で推薦書を作成。<br />だから合格率が高い。
             </h3>
-            <p class="mt-2 text-sm text-gray-500">
+            <p class="mt-2 text-gray-700">
               タクシーメイトでは、希望される方に数分のお電話で職歴や事故歴、運転履歴などをお伺いし推薦書を作成しています。現時点で履歴書など何も準備をしていない方でも、最短でお問合せしたその日中にタクシー企業との面接の日程まで決めることができます。求職者様には非常に早い転職活動ができたとご好評いただいております。
             </p>
           </div>
@@ -308,11 +314,11 @@ const jobs = await getLatestJobsFromNotion();
           class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8"
         >
           <div class="mt-6 lg:col-span-5 lg:col-start-8 lg:row-start-1 lg:mt-0">
-            <h3 class="text-lg font-medium text-gray-900">
-              本当に条件に合った企業だけを紹介。
+            <h3 class="text-2xl font-semibold text-gray-900">
+              本当に条件に合った企業だけを紹介。<br />
               だから紹介は厳選した2〜3社のみ。
             </h3>
-            <p class="mt-2 text-sm text-gray-500">
+            <p class="mt-2 text-gray-700">
               他社の人材紹介会社でお問い合わせをすると、すぐにタクシー会社を4〜5社紹介されて全ての企業と日程調整をすることが多くあります。これでは面接の日程調整も大変で、内定を受けた後も断らなくてはならないこともあります。タクシーメイトでは基本的には事前に働きたい条件を聞いた上でまずは厳選した1社（最大3社まで）を紹介します。ひとまず面接に行ってみようではなく、事前に条件を決めた上で面接に行く形での転職活動を推奨しています。
             </p>
           </div>
@@ -328,10 +334,10 @@ const jobs = await getLatestJobsFromNotion();
           class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8"
         >
           <div class="mt-6 lg:col-span-5 lg:col-start-1 lg:row-start-1 lg:mt-0">
-            <h3 class="text-lg font-medium text-gray-900">
-              転職後もコミュニティで情報交換。 だから継続的に稼ぐ人が多い。
+            <h3 class="text-2xl font-semibold text-gray-900">
+              転職後もコミュニティで情報交換。<br />だから継続的に稼ぐ人が多い。
             </h3>
-            <p class="mt-2 text-sm text-gray-500">
+            <p class="mt-2 text-gray-700">
               タクシーメイトには転職したドライバーの小さなコミュニティが存在します。実際に入社した後も、先輩ドライバーがどのように稼いでいるかや、最近はこのエリアが人が増えてきたなどの情報等、その業界の現役ドライバーしか知り得ない、鮮度の高い情報交換の場を設けています。このような仕組みがあることで、タクシーメイトから転職した人材は入社後も安定して稼げていることが特徴です。
             </p>
           </div>
@@ -356,7 +362,7 @@ const jobs = await getLatestJobsFromNotion();
         >
           おすすめの求人
         </h2>
-        <p class="mt-2 text-lg/8 text-gray-600">
+        <p class="mt-4 text-lg text-gray-700">
           月給45万円以上が目指せる求人を厳選して紹介しています
         </p>
       </div>
@@ -414,8 +420,8 @@ const jobs = await getLatestJobsFromNotion();
     <div class="container mx-auto px-4">
       <!-- セクションタイトル -->
       <div class="text-center mb-12">
-        <p class="text-gray-600 mb-2">お問い合わせから最短1週間で内定</p>
-        <h2 class="text-3xl font-bold">入社までの流れ</h2>
+        <p class="text-gray-700 mb-2">お問い合わせから最短1週間で内定</p>
+        <h2 class="text-5xl font-bold text-gray-900">入社までの流れ</h2>
       </div>
 
       <!-- プロセスのステップ -->
