--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -25,7 +25,7 @@
         class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left"
       >
         <h2
-          class="text-3xl font-semibold tracking-tight text-balance text-white sm:text-4xl"
+          class="text-4xl font-semibold tracking-tight text-balance text-white"
         >
           さあ、今すぐ転職サポートを受けましょう
         </h2>
@@ -38,9 +38,20 @@
           <a
             href="/lp-1/"
             target="_blank"
-            class="rounded-md bg-white px-3.5 py-2.5 font-semibold text-gray-900 shadow-xs hover:bg-gray-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
-            >転職支援サービスに登録</a
-          >
+            class="rounded-md bg-white px-3.5 py-2.5 font-semibold text-gray-900 shadow-xs hover:bg-gray-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white inline-flex items-center gap-2"
+            >転職支援サービスに登録
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="size-5"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8.25 3.75H19.5a.75.75 0 0 1 .75.75v11.25a.75.75 0 0 1-1.5 0V6.31L5.03 20.03a.75.75 0 0 1-1.06-1.06L17.69 5.25H8.25a.75.75 0 0 1 0-1.5Z"
+                clip-rule="evenodd"></path>
+            </svg>
+          </a>
           <a href="/contact/" class="font-semibold text-white"
             >メールで求人を受け取る<span aria-hidden="true">→</span></a
           >
