--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
+import Breadcrumb from '../../components/Breadcrumb.astro';
 
 const pageUrl = 'https://taxi-mate.jp/contact/';
 const pageTitle = 'メールで求人を受け取る';
@@ -58,8 +59,10 @@ const pageDescription =
     </div>
   </div>
 
+  <Breadcrumb pageName={pageTitle} />
+
   <!-- お問い合わせセクション -->
-  <div class="relative isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
+  <div class="relative isolate bg-white px-6 sm:py-16 lg:px-8">
     <svg
       class="absolute inset-0 -z-10 size-full mask-[radial-gradient(100%_100%_at_top_right,white,transparent)] stroke-gray-200"
       aria-hidden="true"
@@ -181,7 +184,7 @@ const pageDescription =
             <button
               type="submit"
               class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-              >Let’s talk</button
+              >Let's talk</button
             >
           </div>
           <p class="mt-4 text-sm/6 text-gray-500">
@@ -200,9 +203,9 @@ const pageDescription =
           <figure class="mt-10">
             <blockquote class="text-lg/8 font-semibold text-gray-900">
               <p>
-                “Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
                 expedita voluptas culpa sapiente alias molestiae. Numquam
-                corrupti in laborum sed rerum et corporis.”
+                corrupti in laborum sed rerum et corporis."
               </p>
             </blockquote>
             <figcaption class="mt-10 flex gap-x-6">
