スマホに最適化

--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -33,12 +33,12 @@
           どんなタクシー会社があるのかの質問だけでも構いません。まずはお気軽にお問い合わせください
         </p>
         <div
-          class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start"
+          class="mt-10 flex flex-col sm:flex-row items-center justify-center gap-4 sm:gap-x-6 lg:justify-start"
         >
           <a
             href="/lp-1/"
             target="_blank"
-            class="rounded-md bg-white px-3.5 py-2.5 font-semibold text-gray-900 shadow-xs hover:bg-gray-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white inline-flex items-center gap-2"
+            class="w-full sm:w-auto rounded-md bg-white px-3.5 py-2.5 font-semibold text-gray-900 shadow-xs hover:bg-gray-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white inline-flex items-center justify-center gap-2"
             >転職支援サービスに登録
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -52,7 +52,9 @@
                 clip-rule="evenodd"></path>
             </svg>
           </a>
-          <a href="/contact/" class="font-semibold text-white"
+          <a
+            href="/contact/"
+            class="w-full sm:w-auto text-center font-semibold text-white"
             >メールで求人を受け取る<span aria-hidden="true">→</span></a
           >
         </div>
