--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -58,6 +58,7 @@
         href="/lp-1/"
         class="text-sm font-semibold text-gray-900 hover:text-gray-600 inline-flex items-center gap-1"
         target="_blank"
+        class="block rounded-lg px-3 py-2 text-base font-semibold text-gray-900 hover:bg-gray-50 inline-flex items-center gap-1"
         >転職支援サービスに登録<svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -158,8 +159,21 @@
             >
             <a
               href="/lp-1/"
-              class="block rounded-lg px-3 py-2 text-base font-semibold text-gray-900 hover:bg-gray-50"
-              >転職支援サービスに登録</a
+              target="_blank"
+              class="block rounded-lg px-3 py-2 text-base font-semibold text-gray-900 hover:bg-gray-50 inline-flex items-center gap-1"
+              >転職支援サービスに登録<svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-4 h-4"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"></path>
+              </svg></a
             >
           </div>
 
