--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,15 +74,17 @@ const jobs = await getLatestJobsFromNotion();
               給与は頑張った分だけ。休みは自由に。
             </h1>
             <p
-              class="mt-8 text-lg font-medium text-pretty text-gray-700 sm:max-w-md sm:text-xl/8 lg:max-w-none"
+              class="mt-8 text-md font-medium text-pretty text-gray-700 sm:max-w-md sm:text-xl/8 lg:max-w-none"
             >
               タクシーメイトは、タクシー業界に特化した転職支援サービスです。あなたの住んでいる場所や希望の条件の中から最もマッチしたタクシー会社を厳選して紹介します。
             </p>
-            <div class="mt-10 flex items-center gap-x-6">
+            <div
+              class="mt-10 flex flex-col sm:flex-row items-center gap-4 sm:gap-x-6"
+            >
               <a
                 href="/lp-1/"
                 target="_blank"
-                class="rounded-md bg-indigo-600 px-3.5 py-2.5 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 flex items-center gap-2"
+                class="w-full sm:w-auto rounded-md bg-indigo-600 px-3.5 py-2.5 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 flex items-center justify-center gap-2"
               >
                 転職支援サービスに登録
                 <svg
@@ -99,7 +101,10 @@ const jobs = await getLatestJobsFromNotion();
                     d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"></path>
                 </svg>
               </a>
-              <a href="/contact/" class="font-semibold text-gray-900">
+              <a
+                href="/contact/"
+                class="w-full sm:w-auto font-semibold text-gray-900 text-center"
+              >
                 メールで求人を受け取る <span aria-hidden="true">→</span>
               </a>
             </div>
@@ -182,7 +187,7 @@ const jobs = await getLatestJobsFromNotion();
   </div>
 
   <!-- ロゴ -->
-  <div class="bg-white py-24 sm:py-32">
+  <div class="bg-white py-0 sm:py-8">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div
         class="mx-auto grid max-w-lg grid-cols-4 items-center gap-x-8 gap-y-12 sm:max-w-xl sm:grid-cols-4 sm:gap-x-10 sm:gap-y-14 lg:mx-0 lg:max-w-none lg:grid-cols-4"
@@ -292,11 +297,11 @@ const jobs = await getLatestJobsFromNotion();
 
       <div class="mt-16 space-y-16">
         <div
-          class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8"
+          class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8 mb-36"
         >
           <div class="mt-6 lg:col-span-5 lg:col-start-1 lg:row-start-1 lg:mt-0">
             <h3 class="text-2xl font-semibold text-gray-900">
-              数分のお電話で推薦書を作成。<br />だから合格率が高い。
+              数分のお電話で推薦書を作成。だから合格率が高い。
             </h3>
             <p class="mt-2 text-gray-700">
               タクシーメイトでは、希望される方に数分のお電話で職歴や事故歴、運転履歴などをお伺いし推薦書を作成しています。現時点で履歴書など何も準備をしていない方でも、最短でお問合せしたその日中にタクシー企業との面接の日程まで決めることができます。求職者様には非常に早い転職活動ができたとご好評いただいております。
@@ -311,12 +316,11 @@ const jobs = await getLatestJobsFromNotion();
           </div>
         </div>
         <div
-          class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8"
+          class="flex flex-col-reverse lg:grid lg:grid-cols-12 lg:items-center lg:gap-x-8 mb-36"
         >
           <div class="mt-6 lg:col-span-5 lg:col-start-8 lg:row-start-1 lg:mt-0">
             <h3 class="text-2xl font-semibold text-gray-900">
-              本当に条件に合った企業だけを紹介。<br />
-              だから紹介は厳選した2〜3社のみ。
+              本当に条件に合った企業だけを紹介。だから紹介は厳選した2〜3社のみ。
             </h3>
             <p class="mt-2 text-gray-700">
               他社の人材紹介会社でお問い合わせをすると、すぐにタクシー会社を4〜5社紹介されて全ての企業と日程調整をすることが多くあります。これでは面接の日程調整も大変で、内定を受けた後も断らなくてはならないこともあります。タクシーメイトでは基本的には事前に働きたい条件を聞いた上でまずは厳選した1社（最大3社まで）を紹介します。ひとまず面接に行ってみようではなく、事前に条件を決めた上で面接に行く形での転職活動を推奨しています。
@@ -335,7 +339,7 @@ const jobs = await getLatestJobsFromNotion();
         >
           <div class="mt-6 lg:col-span-5 lg:col-start-1 lg:row-start-1 lg:mt-0">
             <h3 class="text-2xl font-semibold text-gray-900">
-              転職後もコミュニティで情報交換。<br />だから継続的に稼ぐ人が多い。
+              転職後もコミュニティで情報交換。だから継続的に稼ぐ人が多い。
             </h3>
             <p class="mt-2 text-gray-700">
               タクシーメイトには転職したドライバーの小さなコミュニティが存在します。実際に入社した後も、先輩ドライバーがどのように稼いでいるかや、最近はこのエリアが人が増えてきたなどの情報等、その業界の現役ドライバーしか知り得ない、鮮度の高い情報交換の場を設けています。このような仕組みがあることで、タクシーメイトから転職した人材は入社後も安定して稼げていることが特徴です。
@@ -571,7 +575,7 @@ const jobs = await getLatestJobsFromNotion();
                 紹介費用などは発生しますか？
               </span>
             </dt>
-            <dd class="mt-2 pr-12" id="faq-0">
+            <dd class="mt-2" id="faq-0">
               <p class="text-base/7 text-gray-600">
                 求職者様に対しての紹介手数料などの費用については一切発生いたしません。面接の際に訪問する企業への交通費のみご負担頂いておりますので予めご了承ください。
               </p>
@@ -597,7 +601,7 @@ const jobs = await getLatestJobsFromNotion();
                 正式な認可を受けた人材紹介会社ですか？
               </span>
             </dt>
-            <dd class="mt-2 pr-12" id="faq-0">
+            <dd class="mt-2" id="faq-0">
               <p class="text-base/7 text-gray-600">
                 はい。弊社は厚生労働大臣より正式な許認可を受けた人材紹介会社（有料職業紹介事業者）です（許認可番号
                 13-ユ-316113）。紹介を行い実際にタクシー企業様に入社し雇用契約を締結するまでの転職活動をサポートさせていただきます。
@@ -624,7 +628,7 @@ const jobs = await getLatestJobsFromNotion();
                 何社くらい紹介してくれますか？
               </span>
             </dt>
-            <dd class="mt-2 pr-12" id="faq-0">
+            <dd class="mt-2" id="faq-0">
               <p class="text-base/7 text-gray-600">
                 タクシーメイトでは紹介数の多さではなく、ヒアリングをした上で本当にあなたに合った、月給45万円が目指せるタクシー企業のみを紹介しています。そのため、通常1〜2社のみの紹介となります。
                 ただし、面接を事前連絡なしで辞退した場合などについては、今後企業を紹介することができませんので予めご了承ください。
@@ -648,10 +652,10 @@ const jobs = await getLatestJobsFromNotion();
                     d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
                   ></path>
                 </svg>
-                面接から入社までのスケジュールを教えてください
+                入社までのスケジュールを教えてください
               </span>
             </dt>
-            <dd class="mt-2 pr-12" id="faq-0">
+            <dd class="mt-2" id="faq-0">
               <p class="text-base/7 text-gray-600">
                 サービスの導入時間は、組織の規模や要件によって異なります。
                 通常は比較的迅速に導入が可能ですが、具体的な導入期間はお問い合わせいただくか、専任担当者にご相談ください。
